removed bad TODO and changed getters to use Collections.unmodifiable methods for returning views instead of copies.